# hugr-llvm

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  out.ll  planqc_1.py  pyproject.toml
.github/workflows/: ci-rs.yml  ci.yml
hugr-llvm-exec/: Cargo.toml
hugr-llvm-exec/src/: lib.rs  main.rs
qir-plugin/: Cargo.toml
qir-plugin/src/: flatten.rs  lib.rs  no_agg_funcs.rs  topo_bb.rs
src/: cli.rs  custom.rs  debuginfo.rs  def_hooks.rs  emit.rs  fat.rs  lib.rs  main.rs  sum.rs  test.rs  type_map.rs  types.rs
src/custom/: angle.rs  conversions.rs  def_hook.rs  extension_op.rs  float.rs  int.rs  load_constant.rs  logic.rs  prelude.rs  ptr.rs  qir.rs  rotation.rs  tket2.rs  tket2_qir.rs  types.rs
src/custom/prelude/: array.rs
src/custom/prelude/snapshots/: hugr_llvm__custom__prelude__array__test__emit_all_ops@llvm14.snap  hugr_llvm__custom__prelude__array__test__emit_all_ops@pre-mem2reg@llvm14.snap  hugr_llvm__custom__prelude__array__test__prelude_array_ops@llvm14.snap  hugr_llvm__custom__prelude__array__test__prelude_array_ops@pre-mem2reg@llvm14.snap
src/custom/snapshots/: hugr_llvm__custom__angle__test__emit_all_ops@llvm14.snap  hugr_llvm__custom__angle__test__emit_all_ops@pre-mem2reg@llvm14.snap  hugr_llvm__custom__conversions__test__convert_u@llvm14.snap  hugr_llvm__custom__conversions__test__convert_u@pre-mem2reg@llvm14.snap  hugr_llvm__custom__conversions__test__trunc_s@llvm14.snap  hugr_llvm__custom__conversions__test__trunc_s@pre-mem2reg@llvm14.snap  hugr_llvm__custom__conversions__test__trunc_u@llvm14.snap  hugr_llvm__custom__conversions__test__trunc_u@pre-mem2reg@llvm14.snap  hugr_llvm__custom__float__test__const_float@llvm14.snap  hugr_llvm__custom__float__test__const_float@pre-mem2reg@llvm14.snap  hugr_llvm__custom__ptr__test__ptr@llvm14.snap  hugr_llvm__custom__ptr__test__ptr@pre-mem2reg@llvm14.snap
src/emit/: args.rs  func.rs  ops.rs  test.rs
src/emit/func/: mailbox.rs
src/emit/ops/: cfg.rs
src/extension/: conversions.rs  rotation.rs
src/type_map/: def_hook.rs  destructor.rs
src/utils/: fat.rs  inline_constant_functions.rs  type_map.rs
tests/: guppy.rs
tests/guppy_test_cases/: even_odd.py  planqc-1.py  planqc-2.py  planqc-3.py
tests/snapshots/: guppy__even_odd.snap  guppy__even_odd2@llvm14.noopt.snap  guppy__even_odd2@llvm14.opt.snap  guppy__even_odd@llvm14.noopt.snap  guppy__even_odd@llvm14.opt.snap  guppy__planqc1@llvm14.noopt.snap  guppy__planqc1@llvm14.opt.snap  guppy__planqc2@llvm14.noopt.snap  guppy__planqc2@llvm14.opt.snap  guppy__planqc3@llvm14.noopt.snap  guppy__planqc3@llvm14.opt.snap
