[package]
name = "hugr-llvm"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["llvm14"]
llvm14 = ["dep:llvm-sys-140", "inkwell/llvm14-0"]

[dependencies]
inkwell = { version = "0.4.0", default-features=false }
llvm-sys-140 = { package = "llvm-sys", version = "140.1.3", features = ["prefer-static"], optional = true}
hugr = "0.5.1"
hugr-cli = "0.1.1"
anyhow = "1.0.83"
itertools = "0.12.1"
delegate = "0.12.0"
petgraph = "*"
lazy_static = "*"
downcast-rs= "1.2.1"
pathsearch = "0.2.0"
thiserror = "1.0.61"
clap = "4.5.7"
clap-verbosity-flag = "2.2.0"
serde_json = "1.0.117"

[dev-dependencies]
insta = "1.39.0"
insta-cmd = "0.6.0"
rstest = "0.19.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

