[tool.poetry]
name = "hugr-llvm"
version = "0.1.0"
description = ""
authors = ["Douglas Wilson"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
guppylang= { git = "https://github.com/CQCL/guppylang.git", branch = "fix/input-order" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
