[package]
name = "hugr-llvm-exec"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
qir-backend = { git = "https://github.com/qir-alliance/qir-runner" }
clap = {version = "4.5", features = ["derive"] }
pathsearch = "*"
anyhow = "*"
hugr = "*"
hugr-llvm = { path = "../.", features = ["tket2"] }
tket2 = { git = "https://github.com/CQCL/tket2.git" }
serde_json = "*"
lazy_static = "*"
inkwell = { version = "0.4.0", default-features=false }
libloading = "0.8.5"
findshlibs = "0.10.2"
